fix bug update vehicle geo data